<resources>
    <string name="app_name">Core</string>

    <string name="title_find">Find</string>
    <string name="title_mine">Mine</string>
    <string name="title_follow">Follow</string>
    <string name="title_task">Task</string>
    <string name="title_collect">Collections</string>
    <string name="title_account_info">Personal Info</string>
    <string name="title_nickname">Nick Name</string>
    <string name="title_resetpwd">Reset Password</string>
    <string name="title_change_phone_num">Change Phone Number</string>
    <string name="title_help">Help Center</string>
    <string name="title_invite">Invite Friend</string>
    <string name="title_wallet">My Wallet</string>
    <string name="title_verify_code">Verify Mobile</string>
    <string name="title_bind_phone_num">Bind New Phone Number</string>
    <string name="device_offline">Device Offline</string>
    <string name="device_offline_tips">Your account is already logged in on another device, please secure your mobile device and try again.</string>
    <string name="you_hava_not_been_logged_in_yet">Please login first to process you further actions.</string>
    <string name="not_yet_logged_in">Not logged in</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>

    <!--mine-->
    <string name="title_setting">Setting</string>
    <string name="login_or_register">Login/Register</string>
    <string name="fans">fans</string>
    <string name="follow">follow</string>
    <string name="add_follow">+ follow</string>
    <string name="follow_each_other">follow each other</string>
    <string name="edit">edit</string>
    <string name="my_wallet">My Wallet</string>
    <string name="invite_friends">Invite Friend</string>
    <string name="collection">Collection</string>
    <string name="settings">Setting</string>

    <!--mine settings-->
    <string name="clear_cache">Clear Cache</string>
    <string name="language_setting">Language Setting</string>
    <string name="help">Help</string>
    <string name="feed_back">Feed Back</string>
    <string name="submit">Submit</string>
    <string name="about">About MagicBox</string>
    <string name="version">Version</string>
    <string name="description">What is MagicBox</string>
    <string name="choose_country">Please select Country/Region code</string>

    <!--mine wallet-->
    <string name="coin_in">roll-in</string>
    <string name="coin_out">roll-out</string>
    <!-- 选择国家 -->
    <string name="country_region">Country/Region</string>
    <!-- 国家地区 -->
    <string name="select_country">Select Country/Region</string>
    <string name="select_language">Select Language</string>
    <string name="follow_system_language">Auto</string>

    <!--用户反馈-->
    <string name="feedback_des">Please write down your comments or feedback. Thank you!</string>

    <!--邀请页面-->
    <string name="invite_code">My invitation code</string>
    <string name="copy_link">Copy link</string>
    <string name="scan">Scan download application</string>
    <string name="share">Share</string>
    <string name="msg1">Invite friends to get a reward 40MB drill</string>
    <string name="msg2">follow up can get more related income</string>

    <!--Account info-->
    <string name="user_icon">Head Portrait</string>
    <string name="magicbox_num">MagicBox Number</string>
    <string name="nick_name">Nick Name</string>
    <string name="phone_num">Mobile</string>
    <string name="login_pwd">Password</string>
    <string name="input_nick_name">Input Nick Name</string>
    <string name="bind">verified</string>
    <string name="set">set</string>
    <string name="tobind">to bind</string>
    <string name="toset">to set</string>
    <string name="current_num">Current cell phone number</string>
    <string name="info">To verify account security, verify the current cell phone number before changing it</string>
    <string name="modify_nickname_prompt">Nicknames can be modified only 1 times a month. Please be careful</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="pwd_info">Passwords can be combined with letters, numbers and characters, limited to 8~20 bits</string>

    <string name="loading_msg">Loading</string><!-- 正在加载 -->
    <string name="empty_msg">There is noting here！</string><!-- 没有数据 -->
    <string name="error_msg">Network exception, please check network settings</string><!-- 网络错误，请检查您的网络设置 -->
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>

    <!--facebook的key-->
    <string name="facebook_app_id">443803932808723</string>
    <string name="fb_login_protocol_scheme">fb443803932808723</string>
    <string name="tab_mine_title">个人</string>
    <string name="copy_the_link">Copy the link</string>
    <string name="facebook">Facebook</string>
    <string name="messenger">Messenger</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="password_to_login">Password to login</string>
    <string name="verify_the_login">Verify the login</string>
    <string name="user_telephone">Mobile phone number</string>
    <string name="password">Password</string>
    <string name="set_password">Set the password</string>
    <string name="set_password_and_login">Set and Login</string>
    <string name="set_login_password">Set the Login password</string>
    <string name="forget_pwd_signed">Forgot password?</string>
    <string name="login_with_verify_code">SMS verification code login</string>
    <string name="agree">agree</string>
    <string name="consent_user_agreement">User Agreement</string>
    <string name="click_to_verification">Get verification</string>
    <string name="next">Next</string>
    <string name="verification_code">Verification Code</string>
    <string name="get_vcode">Get the verification code</string>
    <string name="title_find_pwd">Find password</string>
    <string name="enter_invitation_code">输入邀请码（非必填）</string>
    <string name="enter_password_again">Enter password again</string>

    <!--common-->
    <string name="confirm">Confirm</string>
    <string name="delete">delete</string>

    <!--个人主页-->
    <string name="funs">Funs</string>
    <string name="has_follow">Has Follow</string>
    <string name="refreshing">loading</string>

    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="logout">Log Out</string>
    <string name="sending_code_s">Sending verification code%sS</string>
    <string name="no_updates_are_available">No updates are available</string>
    <string name="updates_s_article">%s articles have been updated</string>
    <string name="think_about">Think About</string>
    <string name="yeap">Yeap</string>
    <string name="do_you_want_to_unfollow">Do you want to unfollow</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="exit_by_double_click">Click again to exit</string>
    <string name="this_mobile_phone_number_has_not_been_registered">此手机号码尚未注册</string>
</resources>
