<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_facebook"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/facebook"/>

        <TextView
            android:id="@+id/tv_messenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_messenger"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/messenger"/>

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_copy"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/copy_the_link"/>

    </LinearLayout>

    <View style="@style/line.gray_tran"/>

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/text.16.gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"/>

</LinearLayout>