<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/text.16.gray.bold"
            android:text="@string/device_offline"
            android:textStyle="bold"/>

        <TextView
            style="@style/text.14.gray"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/device_offline_tips"/>

        <Button
            android:id="@+id/btn_login"
            style="@style/button.small"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/log_in"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_close"/>

</LinearLayout>

